...
                IndustrialButton(
                    onClick = {
                        GatekeeperStateManager.dispatch(
                            GatekeeperAction.SurgicalNavigationRequested("https://m.youtube.com/results?search_query="),
                        )
                    },
                    text = "Search",
                    enabled = !url.contains("/results?search_query"),
                    invertEnabledColor = true,
                )
                IndustrialButton(
                    onClick = {
                        GatekeeperStateManager.dispatch(
                            GatekeeperAction.SurgicalNavigationRequested("gatekeeper://safe_channels"),
                        )
                    },
                    text = "Safe Channels",
                    enabled = url != "gatekeeper://safe_channels",
                    invertEnabledColor = true,
                )
            }
            Spacer(modifier = Modifier.width(8.dp))
            IndustrialButton(onClick = onClose, text = "Exit", isWarning = true)
        }

        if (url == "gatekeeper://safe_channels") {
            safeChannelsList(
                onNavigate = {
                    GatekeeperStateManager.dispatch(GatekeeperAction.SurgicalNavigationRequested(it))
...
                                                "https://m.youtube.com/$id"
                                            } else {
                                                "https://m.youtube.com/channel/$id"
                                            }
                                        onNavigate("$baseUrl/videos")
                                    },
                                    text = "View",
                                )
                                IndustrialButton(
                                    onClick = {
                                        GatekeeperStateManager.dispatch(GatekeeperAction.ToggleSafeYouTubeChannel(id, name))
                                    },
                                    text = "Remove",
                                    isWarning = true,
                                )
                            }
                        }
                    }
                }
...
